--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rfesi"
-version = "0.17.0"
+version = "0.18.0"
 authors = ["Celeo <mattboulanger@fastmail.com>"]
 edition = "2021"
 description = "Rust API for EVE Online's ESI"
@@ -23,12 +23,14 @@ reqwest = { version = "0.11.14", features = ["json"] }
 serde = { version = "1.0.155", features = ["derive"] }
 serde_json = "1.0.94"
 thiserror = "1.0.39"
+futures-core = "0.3.28"
+tokio = { version = "1.26.0", features = ["full"] }
+async-stream = "0.3.5"
 
 [dev-dependencies]
 mockito = "1.0.0"
 pretty_env_logger = "0.5.0"
 rusty-hook = "0.11.2"
-tokio = { version = "1.26.0", features = ["full"] }
 
 [features]
 default = ["random_state", "validate_jwt"]
